# lifeofpy

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  lifeofpy.json  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  component_request.md  documentation.md  feature_request.md  framework_request.md  question.md
.github/workflows/: ci.yml  registry-builder.yml  release.yml
apps/website/: package-lock.json  package.json
apps/website/src/app/: globals.css  layout.tsx  page.tsx
apps/website/src/app/components/: layout.tsx  page.tsx
apps/website/src/app/components/[slug]/: page.tsx
apps/website/src/app/docs/: layout.tsx  page.tsx
apps/website/src/app/examples/: page.tsx
apps/website/src/app/inspiration/: page.tsx
apps/website/src/app/studio/: page.tsx
apps/website/src/components/: theme-toggle.tsx
apps/website/src/components/home/: component-showcase.tsx  hero-explorer.tsx  terminal-preview.tsx
apps/website/src/components/layout/: command-palette.tsx  footer.tsx  navbar.tsx
docs/: LABELS.md  index.md
registry/button-01/: README.md  component.py  demo.py  manifest.json
tests/: test_manifest_validator.py
